@@ -32,7 +32,7 @@ requires:
   perl: 5.6.2
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Graph-Reader-TGF-CSV
-  homepage: https://github.com/tupinek/Graph-Reader-TGF-CSV
+  homepage: https://github.com/michal-josef-spacek/Graph-Reader-TGF-CSV
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Graph-Reader-TGF-CSV
+  repository: git://github.com/michal-josef-spacek/Graph-Reader-TGF-CSV
 version: '0.03'
