@@ -22,8 +22,8 @@ requires 'Text::CSV' => 0;
 requires 'perl' => '5.6.2';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Graph-Reader-TGF-CSV';
-resources 'homepage' => 'https://github.com/tupinek/Graph-Reader-TGF-CSV';
-resources 'repository' => 'git://github.com/tupinek/Graph-Reader-TGF-CSV';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Graph-Reader-TGF-CSV';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Graph-Reader-TGF-CSV';
 test_requires 'Encode' => 0;
 test_requires 'English' => 0;
 test_requires 'File::Object' => 0.07;
