@@ -86,7 +86,7 @@ SEE ALSO
         Install the Graph::Reader modules.
 
 REPOSITORY
-    <https://github.com/tupinek/Graph-Reader-TGF-CSV>
+    <https://github.com/michal-josef-spacek/Graph-Reader-TGF-CSV>
 
 AUTHOR
     Michal Špaček <mailto:skim@cpan.org>
